# ChangeLog for sys-infiniband/dapl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-infiniband/dapl/ChangeLog,v 1.3 2012/04/18 16:38:19 alexxy Exp $

*dapl-2.0.34 (18 Apr 2012)

  18 Apr 2012; Alexey Shvetsov <alexxy@gentoo.org> +dapl-2.0.34.ebuild,
  -dapl-2.0.32.ebuild:
  [sys-infiniband/dapl] Version bump to OFED 1.5.4.1

  02 Jul 2011; Alexey Shvetsov <alexxy@gentoo.org> dapl-2.0.32.ebuild:
  Add ~amd64-linux keywrod

*dapl-2.0.32 (30 Jun 2011)

  30 Jun 2011; Alexey Shvetsov <alexxy@gentoo.org> +dapl-2.0.32.ebuild,
  +metadata.xml:
  Initial import to tree
