@@ -1,6 +1,9 @@
 # ChangeLog for sys-infiniband/dapl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-infiniband/dapl/ChangeLog,v 1.3 2012/04/18 16:38:19 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-infiniband/dapl/ChangeLog,v 1.4 2012/04/18 18:37:09 alexxy Exp $
+
+  18 Apr 2012; Alexey Shvetsov <alexxy@gentoo.org> dapl-2.0.34.ebuild:
+  [sys-infiniband/dapl] Simplyfy ebuild
 
 *dapl-2.0.34 (18 Apr 2012)
 
